--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/kwhitejr/passport-demo#readme",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "express": "^4.13.4",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "passport": "^0.3.2"
   }
 }
