--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "express-sessions": "^1.0.5",
     "jade": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
